server/compilers/goLiteJS/src/test/ml2/valid/unary4.go
// unary operations on literals
package main

func main() {
    _ = +23
    _ = +23.0
    _ = +'a'

    _ = -23
    _ = -23.0
    _ = -'a'

    _ = !true
    _ = !false

    _ = ^23
    _ = ^'a'
}
