server/compilers/goLiteJS/src/test/ml2/invalid/binary7.go
// invalid && types
package main

func main() {
    _ = false && 23.0
}
